--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,7 +1,8 @@
 .page {
-    font-family: "interregular", sans-serif;
-    border: 1px saddlebrown solid;
+    font-family: "Inter", sans-serif;
     background-color: #2A2C2F;
     min-width: 320px;
-    max-width: 1600px;
+    max-width: 1280px;
+    margin: 0 auto;
+    padding: 0;
 }
