--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,8 +1,14 @@
 .cover__subtitle {
-    position: absolute;
-    right: 50%;
-    top: 50%;
-    font-size: 72px;
-    line-height: 20px;
-    z-index: 2;
+    font-size: 18px;
+    line-height: 22px;
+    text-align: center;
+    max-width: 360px;
+    margin: 16px 0 0 0;
+}
+
+@media screen and (max-width: 589px) {
+    .cover__subtitle {
+        font-size: 14px;
+        line-height: 16px;
+    }
 }
