--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,8 +1,15 @@
 .cover__title {
-    position: absolute;
-    right: 50%;
-    top: 50%;
     font-size: 72px;
-    line-height: 20px;
-    z-index: 2;
+    line-height: 76px;
+    text-align: center;
+    max-width: 560px;
+    margin: 0 0 16px 0;
+}
+
+@media screen and (max-width: 589px) {
+    .cover__title {
+        margin: 0 16px 0 16px;
+        font-size: 37px;
+        line-height: 35px;
+    }
 }
