--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,6 +1,11 @@
 .cover {
-    position: relative;
     max-width: 1184px;
-    margin: 92px auto 92px auto;
-    color: #fff;
+    max-height: 740px;
+    margin: 92px 48px;
+}
+
+@media screen and (max-width: 768px) {
+    .cover {
+        margin: 66px auto;
+    }
 }
