--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -5,6 +5,8 @@
     grid-template-rows: repeat(3, 1fr);
     gap: 16px;
     margin: 92px 48px 92px 48px;
+    list-style: none;
+    padding: 0;
 }
 
 @media screen and (max-width: 1024px) {
