--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -4,6 +4,8 @@
     width: calc(100% - 2 * 48px);
     justify-content: space-between;
     align-items: center;
+    background-image: url("../../image/__logo.svg");
+    background-repeat: no-repeat;
 }
 
 @media screen and (max-width: 984px) {
