--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,6 +1,7 @@
 .cover__subtitle {
     font-size: 18px;
     line-height: 22px;
+    font-weight: 400;
     text-align: center;
     max-width: 360px;
     margin: 16px 0 0 0;
