--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,6 +1,7 @@
 .intro__text {
     font-size: 16px;
     line-height: 26px;
+    font-weight: 400;
     color: #FFFFFF;
     margin: 40px 0 33px 0;
 }
