--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,12 +1,21 @@
 .header__logo {
     height: 52px;
     width: 176px;
-    background-image: url("../../image/__logo.svg");
+    background-image: url("../../../image/__logo.svg");
+    background-repeat: no-repeat;
+    background-size: contain;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 768px) {
     .header__logo {
-        height: 52px;
         width: 142px;
+        height: 52px;
+    }
+}
+
+@media (max-width: 560px) {
+    .header__logo {
+        width: 142px;
+        height: 42px;
     }
 }
