--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,11 +1,16 @@
 .cover {
     max-width: 1184px;
-    max-height: 740px;
     margin: 92px 48px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1024px) {
     .cover {
-        margin: 66px auto;
+        margin: 90px 0;
+    }
+}
+
+@media screen and (max-width: 550px) {
+    .cover {
+        margin: 66px 0;
     }
 }
