--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -5,6 +5,10 @@
     color: #fff;
 }
 
+.footer__link:hover {
+    opacity: .8;
+}
+
 @media screen and (max-width: 560px) {
     .footer__link {
         font-size: 24px;
