--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -4,7 +4,13 @@
         justify-content: space-between;
     }
 
-    @media screen and (max-width: 560px) {
+    @media screen and (max-width: 767px) {
+        .footer__links {
+            gap: 10px;
+        }
+    }
+
+    @media screen and (max-width: 562px) {
         .footer__links {
             gap: 32px;
             flex-direction: column;
