--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,26 +1,8 @@
-.header__lang-item {
-    display: flex;
-    gap: 18px;
-}
-
-.header__radio[type=radio] {
-    position: absolute;
-    clip: rect(0 0 0 0);
-    width: 1px;
-    height: 1px;
-    overflow: hidden;
-}
-
-.header__radio:checked+.header__lang-link {
-    text-decoration: underline;
-}
-
 .header__lang-link {
-    display: inline-block;
-    vertical-align: middle;
     font-size: 24px;
     line-height: 28px;
     color: #fff;
+    text-decoration: none;
 }
 
 @media screen and (max-width: 767px) {
