--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -3,7 +3,7 @@
     margin: 28px auto 56px auto;
     width: calc(100% - 2 * 48px);
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-end
 }
 
 @media screen and (max-width: 984px) {
@@ -12,9 +12,14 @@
     }
 }
 
+@media screen and (max-width: 769px) {
+    .header {
+        margin: 16px auto 48px auto;
+    }
+}
+
 @media screen and (max-width: 568px) {
     .header {
         width: calc(100% - 2 * 16px);
-        margin: 16px auto 56px auto;
     }
 }
