--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -5,25 +5,24 @@
     font-size: 96px;
     line-height: 100px;
     color: #FFFFFF;
+    font-weight: 900;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 730px) {
     .lead__title {
-        max-width: 720px;
-        font-size: 66px;
-        line-height: 70px;
+        font-size: 60px;
+        line-height: 64px;
     }
 }
 
-@media screen and (max-width: 520px) {
+@media screen and (max-width:600px) {
     .lead__title {
-        max-width: 370px;
-        font-size: 45px;
-        line-height: 54px;
+        font-size: 44px;
+        line-height: 50px;
     }
 }
 
-@media screen and (max-width:320px) {
+@media screen and (max-width:444px) {
     .lead__title {
         max-width: 288px;
         font-size: 40px;
