--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,9 +1,18 @@
 .lead {
-    max-width: 90%;
+    max-width: 984px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     margin: 0 auto;
+}
+
+@media screen and (max-width: 1024px) {
+    .lead {
+        max-width: 100%;
+        flex-direction: column;
+        align-items: center;
+        margin: 0 48px;
+    }
 }
 
 @media screen and (max-width: 768px) {
