--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,8 +1,13 @@
 .page {
-    font-family: "Inter", sans-serif;
+    font-family: "Inter", Arial, sans-serif;
     background-color: #2A2C2F;
     min-width: 320px;
     max-width: 1280px;
     margin: 0 auto;
     padding: 0;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-text-size-adjust: 100%;
+    -ms-text-size-adjust: 100%;
+    -moz-text-size-adjust: 100%;
 }
