--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,21 +1,19 @@
 .place__paragraph {
     font-weight: 400;
     font-size: 18px;
-    line-height: 163%;
+    line-height: 29px;
 }
 
 @media screen and (max-width: 984px) {
     .place__paragraph {
         font-size: 16px;
-        margin: 0 auto 25px;
+        line-height: 26px;
     }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 550px) {
     .place__paragraph {
-        padding: 0 16px;
-    }
-    .place__paragraph:last-of-type {
-        margin-bottom: 0;
+        margin: 0 16px 0 16px;
+        line-height: 26px;
     }
 }
