--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -5,18 +5,20 @@
     margin: 0;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 1024px) {
     .place__title {
         font-size: 42px;
         line-height: 46px;
-        margin-left: 24px;
+        width: min-content;
     }
 }
 
-@media screen and (max-width: 420px) {
+@media screen and (max-width: 500px) {
     .place__title {
+        margin: 0 16px 0 16px;
+        width: max-content;
+        ;
         font-size: 32px;
         line-height: 35px;
-        margin-left: 16px;
     }
 }
