--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -1,6 +1,7 @@
 .place__url-heading {
     letter-spacing: 2px;
     font-size: 12px;
-    line-height: 20px;
+    line-height: 12px;
     color: #aaa;
+    margin: 0 0 12px 0;
 }
