--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -3,8 +3,8 @@
         margin: 0;
     }
 
-    @media screen and (max-width: 764px) {
+    @media screen and (max-width: 500px) {
         .place__website {
-            margin-left: 16px;
+            margin: 0 16px 0 16px;
         }
     }
